fix header z-index issue with modal

--- a/frontend/public/css/variables.scss
+++ b/frontend/public/css/variables.scss
@@ -10,7 +10,8 @@ $height-per-15-min: 20px;
 
 $timeline-z-index: 1;
 $session-z-index: 5;
-$tooltip-z-index: 10001;
+$tooltip-z-index: 1000;
+// modal z-index: 1500
 $dropdown-menu-z-index: 10000;
 $loading-overlay-z-index: 1000000;
 
